--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
 
         <h1>We are learning Github</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates distinctio molestiae est, cum quasi possimus veniam earum nobis illo temporibus alias doloribus nam pariatur assumenda voluptatibus rerum aperiam sit saepe eveniet cumque! Eligendi in facere hic quisquam saepe perferendis debitis, esse rem sunt. Assumenda est fugiat incidunt, ea molestias nemo!</p>
     </body>
 </html>
